JAVA-38432 Review add-opens and add-exports in modules - Week 34 - 2024 (#17443)
Co-authored-by: timis1 <noreplay@yahoo.com>